--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,7 @@
 
 body {
   background-color: $color-smoked-white;
-  padding: 2rem;
+  padding: 0;
   font-family: 'studiofeixen', sans-serif;
   font-weight: 300;
   line-height: 1.4;
