--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,5 +5,6 @@ body {
   padding: 0;
   font-family: 'studiofeixen', sans-serif;
   font-weight: 300;
-  line-height: 1.4;
+  font-size: 1vw;
+  -webkit-font-smoothing: antialiased;
 }
