Minor header adjustments

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -3,6 +3,7 @@
 .header {
   min-height: 10rem;
   padding: 2rem;
+  font-size: 1.25em;
 }
 
 .navbar {
@@ -23,6 +24,6 @@
 }
 
 .navbar-link {
-  margin-right: 4rem;
+  margin-right: 3em;
   color: $color-dark-gray;
 }
