Add footer styles (#6)
* Remove padding from body and adjust header

* Add footer styles and links

- Style footer
- Add missing footer links

* Minor header adjustments

* Add font-smoothing for firefox

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -2,6 +2,8 @@
 
 .header {
   min-height: 10rem;
+  padding: 2rem;
+  font-size: 1.25em;
 }
 
 .navbar {
@@ -22,6 +24,6 @@
 }
 
 .navbar-link {
-  margin-right: 4rem;
+  margin-right: 3em;
   color: $color-dark-gray;
 }
