--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,8 +2,10 @@
 
 body {
   background-color: $color-smoked-white;
-  padding: 2rem;
+  padding: 0;
   font-family: 'studiofeixen', sans-serif;
   font-weight: 300;
-  line-height: 1.4;
+  font-size: 1vw;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
