--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,16 @@ body {
   padding: 0;
   font-family: 'studiofeixen', sans-serif;
   font-weight: 300;
-  font-size: 1vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 300;
 }
