--- a/components/post-preview/post-preview.module.scss
+++ b/components/post-preview/post-preview.module.scss
@@ -4,12 +4,63 @@
   height: 35em;
   border-radius: 20px;
   overflow: hidden;
-  font-size: 0.9;
+  font-size: 0.9em;
   letter-spacing: -0.4px;
   background-color: #fff;
   color: $color-dark-gray;
   display: grid;
   grid-template-rows: 2fr 3fr;
+
+  @media screen and (max-width: 1250px) {
+    font-size: 0.85em;
+  }
+
+  @media screen and (max-width: 1150px) {
+    font-size: 0.75em;
+    grid-template-rows: 1.7fr 3.3fr;
+    .month-published {
+      display: none;
+    }
+  }
+  @media screen and (max-width: 750px) {
+    .post-text {
+      padding: 2.5em 2.6em 1.8em 2em;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    grid-template-rows: unset;
+    height: 25em;
+
+    .image-container {
+      display: none;
+    }
+  }
+  @media screen and (max-width: 400px) {
+    height: 15em;
+    .post-text {
+      padding: 1.25em 1.6em 1em;
+    }
+
+    .post-info {
+      font-size: 0.9em;
+    }
+
+    .post-description {
+      display: none;
+    }
+    .keywords > * {
+      font-size: 0.83em;
+      padding: 3px;
+    }
+
+    .date-published {
+      display: none;
+    }
+
+    .list {
+      gap: 2px;
+    }
+  }
 }
 
 .image-container {
@@ -18,7 +69,7 @@
 }
 
 .post-text {
-  padding: 1.7em 3em 1em 1.75em;
+  padding: 1.7em 2.6em 1em 1.75em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -48,7 +99,7 @@
   height: 2.4em;
   border-radius: 50px;
   overflow: hidden;
-  margin-right: 7px;
+  margin-right: 0.3em;
 }
 
 .list {
@@ -57,37 +108,67 @@
   gap: 5px;
 }
 
+.date-published {
+  display: flex;
+  gap: 5px;
+}
+
 .keywords {
   text-transform: uppercase;
-  letter-spacing: 0.04px;
+  letter-spacing: -0.2px;
   font-size: 0.7em;
+  text-align: center;
+  @extend .list;
+
   & > * {
     color: gray;
     padding: 5px;
     background-color: lightgrey;
     border-radius: 5px;
   }
+  .pink {
+    background-color: $color-pink;
+    color: darken($color-pink, 20);
+  }
+
+  .violet {
+    background-color: $color-violet;
+    color: darken($color-violet, 20);
+  }
+
+  .pistachio {
+    background-color: $color-pistachio;
+    color: darken($color-pistachio, 35);
+  }
 }
 
 .top-post {
-  grid-column: 1 / 3;
+  grid-column: 1 / 2;
 
-  .post-preview {
-    grid-template-rows: unset;
-    grid-template-columns: 4.8fr 7.2fr;
-  }
+  @media screen and (min-width: 750px) {
+    grid-column: 1 / 3;
 
-  .post-title {
-    font-size: 3em;
-    margin-bottom: 0.45em;
-  }
+    .post-preview {
+      grid-template-rows: unset;
+      grid-template-columns: 4.8fr 7.2fr;
+    }
 
-  .post-description {
-    font-size: 1.25em;
-    letter-spacing: -0.6px;
-  }
+    .post-title {
+      font-size: 3em;
+      margin-bottom: 0.45em;
+    }
 
-  .post-text {
-    padding: 3.875em 4.44em 1.875em 4.125em;
+    .post-description {
+      font-size: 1.25em;
+      letter-spacing: -0.6px;
+    }
+
+    .post-text {
+      padding: 3.875em 4.2em 1.875em 4.125em;
+    }
+
+    .month-published {
+      display: inline;
+    }
   }
 }
