Style post body

--- a/styles/fontfaces.scss
+++ b/styles/fontfaces.scss
@@ -18,3 +18,10 @@
   font-weight: 300;
   src: url('./fonts/RecifeTextWeb-Regular.ttf');
 }
+
+@font-face {
+  font-family: 'PT Mono';
+  font-style: normal;
+  font-weight: 300;
+  src: url('./fonts/PTMono-Regular.ttf');
+}
