--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,7 @@
 
 body {
   background-color: $color-smoked-white;
+  color: $color-dark-gray;
   padding: 0;
   font-family: 'studiofeixen', sans-serif;
   font-weight: 300;
