--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -28,43 +28,43 @@
     width: 70%;
 
     @media screen and (max-width: 750px) {
-      width: unset;
+      width: 90%;
     }
   }
 
-  @mixin heading {
+  @mixin heading($font-size-rg, $font-size-sm) {
     font-family: 'studiofeixensans', sans-serif;
     font-weight: normal;
     line-height: 1.1;
+    font-size: $font-size-rg;
+
+    @media screen and (max-width: 750px) {
+      font-size: $font-size-sm;
+    }
   }
 
   h2 {
-    font-size: 2em;
     @include block-text;
-    @include heading;
+    @include heading(2em, 1.5em);
   }
 
   h3 {
-    font-size: 1.5em;
     @include block-text;
-    @include heading;
+    @include heading(1.5em, 1.3em);
   }
 
   h4 {
-    font-size: 1.3em;
     @include block-text;
-    @include heading;
+    @include heading(1.3em, 1.2em);
   }
 
   h5 {
-    font-size: 1.2em;
     @include block-text;
-    @include heading;
+    @include heading(1.2em, 1.1em);
   }
   h6 {
-    font-size: 1.1em;
     @include block-text;
-    @include heading;
+    @include heading(1.2em, 1em);
   }
 
   p,
