--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,10 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media screen and (max-width: 750px) {
+    font-size: 0.8em;
+  }
 }
 
 h1,
