Add mobile version of categories

--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -6,6 +6,7 @@
   border-radius: 300px;
   border: 2px solid;
   letter-spacing: -0.02em;
+  white-space: nowrap;
 
   &.pistachio {
     background-color: $color-pistachio;
@@ -33,7 +34,7 @@
     border: 1px solid $color-smoked-white;
   }
   &.cta-nav {
-    padding: 0.44em 1.72em;
+    padding: 0.66em 1.72em;
     line-height: 1.77em;
   }
   &.cta-social {
