--- a/components/categories/categories.module.scss
+++ b/components/categories/categories.module.scss
@@ -1,5 +1,19 @@
 .categories {
   display: flex;
-  gap: 1rem;
-  font-size: 1.25rem;
+  gap: 1em;
+  font-size: 1.25em;
+  min-width: fit-content;
+
+  @media screen and (max-width: 1150px) {
+    font-size: 1.15em;
+    gap: 0.8em;
+  }
+
+  @media screen and (max-width: 900px) {
+    font-size: 0.9em;
+  }
+
+  @media screen and (max-width: 500px) {
+    font-size: 0.75em;
+  }
 }
