--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,29 +1,42 @@
 @import '../../styles/variables';
 
 .header {
-  min-height: 10rem;
   padding: 2rem;
   font-size: 1.25em;
+  margin-bottom: 10rem;
+
+  @media screen and (max-width: 900px) {
+    font-size: 1em;
+
+    .navbar-link {
+      margin-right: 2.4em;
+    }
+  }
+
+  @media screen and (max-width: 750px) {
+    font-size: 0.9em;
+    margin-bottom: 3em;
+
+    .navbar-link {
+      margin-right: 2em;
+    }
+  }
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 7rem;
 }
 
-.navbar-wrapper {
-  display: flex;
-  align-items: center;
-}
-
-.navbar-links {
+.nav-links {
   display: flex;
   justify-content: flex-start;
+  align-items: center;
+  font-size: 0.9em;
+  color: $color-dark-gray;
 }
 
 .navbar-link {
   margin-right: 3em;
-  color: $color-dark-gray;
 }
