--- a/components/categories/categories.module.scss
+++ b/components/categories/categories.module.scss
@@ -13,6 +13,10 @@
     font-size: 0.9em;
   }
 
+  @media screen and (max-width: 750px) {
+    font-size: 0.85em;
+  }
+
   @media screen and (max-width: 500px) {
     font-size: 0.75em;
   }
