Delete duplicate font and capitalize font names

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,7 @@ body {
   background-color: $color-smoked-white;
   color: $color-dark-gray;
   padding: 0;
-  font-family: 'studiofeixen', sans-serif;
+  font-family: 'Studio Feixen Sans', sans-serif;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
