--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -10,7 +10,7 @@
 }
 
 .reactMarkdown {
-  font-family: 'recifetextweb', sans-serif;
+  font-family: 'Recife Text Web', sans-serif;
   font-size: 1.25em;
   line-height: 1.6em;
   letter-spacing: -0.4px;
@@ -33,8 +33,8 @@
   }
 
   @mixin heading($font-size-rg, $font-size-sm) {
-    font-family: 'studiofeixensans', sans-serif;
-    font-weight: normal;
+    font-family: 'Studio Feixen Sans', sans-serif;
+    font-weight: 300;
     line-height: 1.1;
     font-size: $font-size-rg;
 
@@ -104,7 +104,7 @@
   }
 
   code {
-    font-family: 'pt mono', monospace;
+    font-family: 'PT Mono', monospace;
     font-weight: bold;
     padding: 2px 5px;
     font-size: 0.9em;
@@ -121,7 +121,7 @@
 
     span {
       text-shadow: none;
-      font-family: 'pt mono', monospace;
+      font-family: 'PT Mono', monospace;
       letter-spacing: 0;
     }
 
