--- a/styles/fontfaces.scss
+++ b/styles/fontfaces.scss
@@ -1,20 +1,20 @@
 @font-face {
-  font-family: 'studiofeixen';
-  font-style: normal;
-  font-weight: normal;
-  src: url('./fonts/StudioFeixenSans-Medium.otf');
-}
-
-@font-face {
-  font-family: 'studiofeixen';
+  font-family: 'Studio Feixen Sans';
   font-style: normal;
   font-weight: 300;
   src: url('./fonts/StudioFeixenSans-Regular.otf');
 }
 
 @font-face {
-  font-family: 'recifetextweb';
+  font-family: 'Recife Text Web';
   font-style: normal;
   font-weight: 300;
   src: url('./fonts/RecifeTextWeb-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'PT Mono';
+  font-style: normal;
+  font-weight: 300;
+  src: url('./fonts/PTMono-Regular.ttf');
 }
