--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,11 +2,16 @@
 
 body {
   background-color: $color-smoked-white;
+  color: $color-dark-gray;
   padding: 0;
-  font-family: 'studiofeixen', sans-serif;
+  font-family: 'Studio Feixen Sans', sans-serif;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media screen and (max-width: 750px) {
+    font-size: 0.8em;
+  }
 }
 
 h1,
