--- a/components/categories/categories.module.scss
+++ b/components/categories/categories.module.scss
@@ -4,20 +4,24 @@
   font-size: 1.25em;
   min-width: fit-content;
 
+  & > * {
+    flex-grow: 1;
+    text-align: center;
+  }
+
   @media screen and (max-width: 1150px) {
     font-size: 1.15em;
     gap: 0.8em;
   }
 
-  @media screen and (max-width: 900px) {
-    font-size: 0.9em;
+  @media screen and (max-width: 1000px) {
+    font-size: 0.95em;
   }
 
   @media screen and (max-width: 750px) {
-    font-size: 0.85em;
+    font-size: 1em;
   }
-
   @media screen and (max-width: 500px) {
-    font-size: 0.75em;
+    font-size: 0.9em;
   }
 }
