--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -5,7 +5,7 @@
   margin: 4.6em auto 13em;
 
   @media screen and (max-width: 1000px) {
-    width: 90%;
+    width: 88.25%;
   }
 }
 
@@ -18,8 +18,14 @@
   * {
     margin: 1.6em auto 0;
     max-width: 100%;
+  }
 
-    @media screen and (max-width: 750px) {
+  @media screen and (max-width: 750px) {
+    font-size: 1em;
+
+    * {
+      margin: 1.6em auto 0;
+      max-width: 100%;
       margin-top: 1.4em;
     }
   }
