--- a/components/post-preview/post-preview.module.scss
+++ b/components/post-preview/post-preview.module.scss
@@ -4,7 +4,6 @@
   height: 35em;
   border-radius: 20px;
   overflow: hidden;
-  font-size: 0.9em;
   letter-spacing: -0.4px;
   background-color: #fff;
   color: $color-dark-gray;
@@ -12,7 +11,7 @@
   grid-template-rows: 2fr 3fr;
 
   @media screen and (max-width: 1250px) {
-    font-size: 0.85em;
+    font-size: 0.9em;
   }
 
   @media screen and (max-width: 1150px) {
@@ -22,6 +21,10 @@
   @media screen and (max-width: 750px) {
     .post-text {
       padding: 2.5em 2.6em 1.8em 2em;
+    }
+
+    .post-title {
+      font-size: 2em;
     }
   }
   @media screen and (max-width: 500px) {
@@ -65,6 +68,7 @@
 .post-description {
   filter: opacity(0.7);
   letter-spacing: -0.3px;
+  font-size: 1.125em;
   line-height: 1.45;
   text-align: justify;
 }
