--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -6,22 +6,6 @@
   margin-bottom: 5.94rem;
 }
 
-@media screen and (max-width: 1000px) {
-  .header {
-    font-size: 1em;
-  }
-
-  .nav-link {
-    margin-right: 2.4em;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .nav-link {
-    margin-right: 2em;
-  }
-}
-
 .nav-main {
   position: absolute;
   top: 2em;
@@ -66,7 +50,27 @@
   display: none;
 }
 
+@media screen and (max-width: 1000px) {
+  .header {
+    font-size: 1em;
+  }
+
+  .nav-link {
+    margin-right: 2.4em;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .nav-link {
+    margin-right: 2em;
+  }
+}
+
 @media screen and (max-width: 750px) {
+  .header {
+    margin-bottom: 3em;
+  }
+
   .nav-main {
     top: 2.5%;
     right: 5%;
@@ -189,6 +193,9 @@
 }
 
 @media screen and (max-width: 500px) {
+  .header {
+    margin-bottom: 2em;
+  }
   .nav-logo > * {
     width: 79px;
   }
