--- a/components/post-header/post-header.module.scss
+++ b/components/post-header/post-header.module.scss
@@ -4,22 +4,12 @@
   gap: 33px;
   width: 83.3%;
   margin: 0 auto;
-  @media screen and (max-width: 500px) {
-    gap: 20px;
-    width: 90%;
-  }
 }
 
 .post-title {
   margin-bottom: 1em;
   font-weight: 300;
   font-size: 4.375em;
-
-  @media screen and (max-width: 500px) {
-    font-size: 2.25em;
-    width: 95%;
-    margin-bottom: 0.4em;
-  }
 }
 
 .header-wrapper-top {
@@ -32,8 +22,28 @@
   width: 100%;
   border-radius: 20px;
   overflow: hidden;
+}
 
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 750px) {
+  .post-title {
+    font-size: 3em;
+    margin-bottom: 0.7em;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .post-header {
+    gap: 43px;
+    width: 90%;
+  }
+
+  .post-title {
+    font-size: 2.25em;
+    width: 95%;
+    margin-bottom: 0.48em;
+  }
+
+  .image-container {
     height: 41vw;
   }
 }
