Turn header menu icon into button

--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -10,6 +10,11 @@ a {
   text-decoration: none;
 }
 
+button {
+  border: none;
+  background-color: transparent;
+}
+
 ul {
   list-style: none;
 }
