--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -9,6 +9,8 @@
   }
   @media screen and (max-width: 500px) {
     margin-top: 2.69em;
+    margin-bottom: 3.82em;
+    width: min(90%, 400px);
   }
 }
 
