--- a/components/post-header/post-header.module.scss
+++ b/components/post-header/post-header.module.scss
@@ -7,7 +7,7 @@
 }
 
 .post-title {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   font-weight: 300;
   font-size: 4.375em;
 }
@@ -24,22 +24,37 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 1000px) {
+  .post-title {
+    margin-bottom: 1em;
+  }
+
+  .image-container {
+    border-radius: 5.2px;
+  }
+}
+
 @media screen and (max-width: 750px) {
   .post-title {
     font-size: 3em;
     margin-bottom: 0.7em;
+    letter-spacing: -0.03em;
+    line-height: 1.167;
   }
 }
 
 @media screen and (max-width: 500px) {
   .post-header {
     gap: 43px;
-    width: 90%;
+    width: min(90%, 400px);
+  }
+
+  .header-wrapper-top {
+    margin: 0;
   }
 
   .post-title {
     font-size: 2.25em;
-    width: 95%;
     margin-bottom: 0.48em;
   }
 
