Add mobile version (#9)
* Add mobile version of categories

* Adjust mobile styles of header, categories, and footer

* Adjust font sizes

* Adjust spacing between header and posts and button padding

* Add mobile navigation menu

--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -1,15 +1,26 @@
 @import '../../styles/variables.scss';
 
 .button {
-  padding: 1.1em 2.2em;
+  padding: 1.521em 2.38em;
   color: $color-dark-gray;
   border-radius: 300px;
   border: 2px solid;
-  letter-spacing: -0.02em;
+  white-space: nowrap;
+  font-size: 1em;
+  text-align: center;
+
+  @media screen and (max-width: 400px) {
+    padding: 1em 1.5em;
+  }
 
   &.pistachio {
     background-color: $color-pistachio;
     border-color: $color-pistachio;
+  }
+  &.green {
+    background-color: $color-green;
+    border-color: $color-green;
+    color: $color-smoked-white;
   }
   &.violet {
     background-color: $color-violet;
@@ -33,8 +44,8 @@
     border: 1px solid $color-smoked-white;
   }
   &.cta-nav {
-    padding: 0.44em 1.72em;
-    line-height: 1.77em;
+    padding: 0.833em 2.29em;
+    line-height: 1.77;
   }
   &.cta-social {
     display: flex;
