--- a/components/post-header/post-header.module.scss
+++ b/components/post-header/post-header.module.scss
@@ -4,22 +4,12 @@
   gap: 33px;
   width: 83.3%;
   margin: 0 auto;
-  @media screen and (max-width: 500px) {
-    gap: 20px;
-    width: 90%;
-  }
 }
 
 .post-title {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   font-weight: 300;
   font-size: 4.375em;
-
-  @media screen and (max-width: 500px) {
-    font-size: 3em;
-    width: 95%;
-    margin-bottom: 0.4em;
-  }
 }
 
 .header-wrapper-top {
@@ -30,10 +20,45 @@
   position: relative;
   height: 34.7vw;
   width: 100%;
-  border-radius: 20px;
+  border-radius: 19.41px;
   overflow: hidden;
+}
 
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 1000px) {
+  .post-title {
+    margin-bottom: 1em;
+  }
+
+  .image-container {
+    border-radius: 5.2px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .post-title {
+    font-size: 3em;
+    margin-bottom: 0.7em;
+    letter-spacing: -0.03em;
+    line-height: 1.167;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .post-header {
+    gap: 43px;
+    width: min(90%, 400px);
+  }
+
+  .header-wrapper-top {
+    margin: 0;
+  }
+
+  .post-title {
+    font-size: 2.25em;
+    margin-bottom: 0.48em;
+  }
+
+  .image-container {
     height: 41vw;
   }
 }
