--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,12 +6,9 @@ body {
   padding: 0;
   font-family: 'Studio Feixen Sans', sans-serif;
   font-weight: 300;
+  letter-spacing: -0.02em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  @media screen and (max-width: 750px) {
-    font-size: 0.8em;
-  }
 }
 
 h1,
