--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -1,17 +1,13 @@
 @import '../../styles/variables.scss';
 
 .button {
-  padding: 1.521em 2.38em;
+  padding: 1.6565rem 2.605rem;
   color: $color-dark-gray;
   border-radius: 300px;
   border: 2px solid;
   white-space: nowrap;
   font-size: 1em;
   text-align: center;
-
-  @media screen and (max-width: 400px) {
-    padding: 1em 1.5em;
-  }
 
   &.pistachio {
     background-color: $color-pistachio;
@@ -42,10 +38,10 @@
     background-color: transparent;
     color: $color-smoked-white;
     border: 1px solid $color-smoked-white;
+    padding: 1.719rem 2.24rem;
   }
   &.cta-nav {
-    padding: 0.833em 2.29em;
-    line-height: 1.77;
+    padding: 0.9375rem 1.8975rem;
   }
   &.cta-social {
     display: flex;
@@ -53,7 +49,23 @@
     align-items: center;
     padding: 0;
     line-height: 1;
-    width: 3.6em;
-    height: 3.6em;
+    width: 5rem;
+    height: 5rem;
+  }
+
+  @media screen and (max-width: 400px) {
+    padding: 1.141rem 2rem;
+
+    &.transparent {
+      padding: 1.204rem 2.3rem;
+    }
+    &.cta-nav {
+      padding: 1.24rem 1.8975rem;
+    }
+    &.cta-social {
+      padding: 0;
+      width: 3.8rem;
+      height: 3.8rem;
+    }
   }
 }
