--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/utilities';
 
 .footer {
   background-color: $color-green;
@@ -86,6 +87,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1em;
+
+    a {
+      position: relative;
+      @include navlink-underline($current: false);
+    }
   }
 
   .footer-wrapper-top-ctas {
