--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/utilities';
 
 .header {
   min-height: 64px;
@@ -40,6 +41,14 @@
 
 .nav-link {
   margin-right: 3em;
+  position: relative;
+
+  &:not(.blog) {
+    @include navlink-underline($current: false);
+  }
+  &.blog {
+    @include navlink-underline($current: true);
+  }
 }
 
 .menu-toggle {
@@ -136,13 +145,24 @@
   }
 
   .nav-links-mobile {
-    opacity: 0.4;
     color: $color-smoked-white;
     font-size: 3.4375em;
     flex-grow: 1;
 
     & > * {
       height: 1.5em;
+      opacity: 0.4;
+      transition: all 0.2s ease-in;
+
+      &:not(.blog):hover,
+      &.blog {
+        opacity: 1;
+      }
+    }
+
+    a {
+      display: block;
+      width: 100%;
     }
   }
 
