Increase link area of post preview

--- a/components/post-preview/post-preview.module.scss
+++ b/components/post-preview/post-preview.module.scss
@@ -35,6 +35,15 @@
   text-align: justify;
 }
 
+.text-wrapper {
+  flex-grow: 1;
+
+  a {
+    display: block;
+    height: 100%;
+  }
+}
+
 @media screen and (max-width: 1250px) {
   .post-preview {
     font-size: 0.9em;
