fixes, simplify css

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,26 +1,39 @@
 @import '../../styles/variables';
 
+.layout {
+  width: 95%;
+  max-width: 1440px;
+  margin: auto;
+  position: relative;  
+}
+
 .main-wrapper {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .categories-container {
-  position: absolute;
+  /* position: absolute;
   top: -8.8em;
-  margin: 0 2em;
+  margin: 0 2em; */
+  order: -1;
+  display: flex;
 
-  @media screen and (max-width: 1000px) {
+  /* @media screen and (max-width: 1000px) {
     top: -7.5em;
-  }
+  } */
 
   @media screen and (max-width: 750px) {
+    order: 1;
     background-color: $color-smoked-white;
     padding: 1em;
     margin: 1em 0;
     position: sticky;
-    bottom: 0;
+    /* bottom: 0; */
     overflow-x: scroll;
   }
+
   @media screen and (max-width: 500px) {
     padding: 6%;
   }
