--- a/components/featured-posts/featured-posts.module.scss
+++ b/components/featured-posts/featured-posts.module.scss
@@ -1,14 +1,14 @@
 .featured-posts {
-  margin: 18em auto 7em;
+  margin: 3.56em auto 7em;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 23px 21px;
   grid-auto-flow: row;
   width: 83.3%;
 
-  @media screen and (max-width: 1000px) {
+  /* @media screen and (max-width: 1000px) {
     margin-top: 15em;
-  }
+  } */
   @media screen and (max-width: 900px) {
     width: 95%;
     column-gap: 18px;
