--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -2,17 +2,35 @@
 @import '../../styles/utilities';
 
 .header {
-  min-height: 64px;
-  font-size: 1.25em;
-  margin-bottom: 9.4rem;
+  /* min-height: 64px; */
+  font-size: 1.25em;  
+  margin: 0 auto 9.4rem;
+  padding: 2em 0;
+  width: 83.8%;
+
+  /* @media screen and (max-width: 900px) {
+    width: 95%;    
+  }
+
+  @media screen and (max-width: 750px) {    
+    width: 70%;
+  } */
+
+  @media screen and (max-width: 500px) {
+    width: 88%;
+  }
+
+  @media screen and (min-width: 750px) {
+    width: auto;
+  }
 }
 
 .nav-main {
-  position: absolute;
+  /* position: absolute;
   top: 2em;
-  right: 2em;
+  right: 2em; */
   z-index: 4;
-  width: calc(100% - 4em);
+  /* width: calc(100% - 4em); */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,11 +99,11 @@
     margin-bottom: 3em;
   }
 
-  .nav-main {
+  /* .nav-main {
     top: 2.5%;
     right: 5%;
     width: 90%;
-  }
+  } */
 
   .menu-toggle {
     height: 14px;
@@ -134,10 +152,11 @@
   .nav-mobile {
     background-color: $color-dark-gray;
     display: block;
-    position: absolute;
+    position: fixed;
     padding: 5%;
     width: 100vw;
     height: 100vh;
+    left: 0;
     top: -100vh;
     visibility: hidden;
     transition: all 0.5s cubic-bezier(0, 0.16, 0.78, 1);
@@ -186,8 +205,10 @@
 
   .header-wrapper {
     &.open {
-      .nav-main {
-        position: fixed;
+      .nav-main {                
+        a, button {
+          z-index: 10;
+        }
       }
 
       .nav-mobile {
@@ -196,7 +217,7 @@
         position: fixed;
       }
 
-      .menu-toggle {
+      .menu-toggle {                
         span {
           background-color: $color-pink;
           transition: transform 0.5s, background-color 0.2s;
