--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -10,7 +10,7 @@
   @media screen and (max-width: 500px) {
     margin-top: 2.69em;
     margin-bottom: 3.82em;
-    width: min(90%, 400px);
+    width: min(100%, 400px);
   }
 }
 
@@ -153,7 +153,7 @@
     }
 
     @media screen and (max-width: 750px) {
-      padding: 20px;
+      padding: 0 20px;
     }
   }
 }
