--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,39 +1,24 @@
-@import '../../styles/variables';
-@import '../../styles/utilities';
+@import "../../styles/variables";
+@import "../../styles/utilities";
 
 .header {
-  /* min-height: 64px; */
-  font-size: 1.25em;  
-  margin: 0 auto 9.4rem;
+  width: 95%;
+  margin: 0 auto 6.25rem;
   padding: 2em 0;
-  width: 83.8%;
+  max-width: 1440px;
+  font-size: 1.25em;
 
-  /* @media screen and (max-width: 900px) {
-    width: 95%;    
-  }
-
-  @media screen and (max-width: 750px) {    
-    width: 70%;
-  } */
-
-  @media screen and (max-width: 500px) {
-    width: 88%;
-  }
-
-  @media screen and (min-width: 750px) {
-    width: auto;
+  @media screen and (max-width: 750px) {
+    width: 90%;    
+    padding: 1.2em 0;
   }
 }
 
 .nav-main {
-  /* position: absolute;
-  top: 2em;
-  right: 2em; */
-  z-index: 4;
-  /* width: calc(100% - 4em); */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 4;
 }
 
 .wrapper-nav-top {
@@ -98,12 +83,6 @@
   .header {
     margin-bottom: 3em;
   }
-
-  /* .nav-main {
-    top: 2.5%;
-    right: 5%;
-    width: 90%;
-  } */
 
   .menu-toggle {
     height: 14px;
@@ -205,8 +184,9 @@
 
   .header-wrapper {
     &.open {
-      .nav-main {                
-        a, button {
+      .nav-main {
+        a,
+        button {
           z-index: 10;
         }
       }
@@ -217,7 +197,7 @@
         position: fixed;
       }
 
-      .menu-toggle {                
+      .menu-toggle {
         span {
           background-color: $color-pink;
           transition: transform 0.5s, background-color 0.2s;
@@ -236,7 +216,7 @@
 
 @media screen and (max-width: 500px) {
   .header {
-    margin-bottom: 2.625em;
+    margin-bottom: 1.5em;
   }
   .nav-logo > * {
     width: 79px;
